@@ -29,6 +29,8 @@ Benutzerverwaltung
   die dazugehörigen Benutzer nach erfolgreicher Authentifizierung laden
   sollen.
 - Für jeden Benutzer kann eine primäre Benutzergruppe definiert werden.
+- Der Platzhalter [[ACCESS_USER_PRIMARY_GROUP]] gibt den Namen der primären
+  Benutzergruppe aus.
 - Die Registrierungsmaske verfügt nun über einen Captcha-Schutz.
 
 Korrespondierende Mehrsprachigkeit
